# ctf-game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: BaseTexture.h.03489056A7154352.idx  Camera.h.500CBC4CBBCCD91F.idx  Entity.cpp.F45B47679D71B3F0.idx  Entity.h.FDB3CFA6FC50B480.idx  Entity_Components.h.060F8B6AC1585973.idx  Game.cpp.26CC99E5C5655648.idx  Game.h.552D0BA899499DF2.idx  InfiniteGrid.cpp.8C005F5DD7DFAE47.idx  InfiniteGrid.h.1850CDC0FC284E1E.idx  Initializer.cpp.3474B6A41022CAE8.idx  Initializer.h.723E22AD8E383662.idx  Logger.cpp.A998ABA9A5838408.idx  Logger.h.EAB6B445254A65A2.idx  Mesh.cpp.3C70BE116916E1ED.idx  Mesh.h.AE177A08FE6144C3.idx  Model.cpp.25D4D8451944B62F.idx  Model.h.C9515DB1FC834909.idx  PhysicsEngine.cpp.AC44B86670F5A3A9.idx  PhysicsEngine.h.77A67BBEC5E84456.idx  Renderer.cpp.E7BFB7DE39C06954.idx  Renderer.h.006DFB824760B2ED.idx  Scene.cpp.A05FC018140C3D72.idx  Scene.h.AC3CD081443E1820.idx  Shader.cpp.D061FFE098F5BC0E.idx  Sun.cpp.CD3A431BC7FAAED0.idx  Sun.h.493110CD500BE8BB.idx  Texture2d.cpp.8AF4EE601DFE1D23.idx  Texture2d.h.1D3EDC264E468746.idx  Texture3d.cpp.7E580D447F3434E1.idx  Texture3d.h.BFE48DCB475586BD.idx  TextureCubeMap.cpp.FDFAD88417A7EC14.idx  TextureCubeMap.h.96CB23B320DE3F5E.idx  _fixes.hpp.8BB17BD40F120F82.idx  _vectorize.hpp.0DA7D312A2CBA17A.idx  common.h.18D6E6C7BC1D2A65.idx  common.h.40A3AFEF4DC84B56.idx  common.hpp.2BF3FE46DFACB119.idx  compute_common.hpp.4AF23D2AB27BFA42.idx  compute_vector_decl.hpp.6CD41A968CB5DB33.idx  compute_vector_relational.hpp.4777C61AEED15104.idx  (+185 more)
abstractions/: package.h
abstractions/include/: BaseTexture.h  Camera.h  Initializer.h  Mesh.h  Model.h  Texture.h  Texture2d.h  Texture3d.h  TextureCubeMap.h  common.h  shader.h
abstractions/src/: Initializer.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture2d.cpp  Texture3d.cpp  TextureCubeMap.cpp  glad.c  stb_image_impl.cpp
include/: Entity.h  Entity_Components.h  Flag.h  Game.h  Logger.h  Player.h  Point.h  Scene.h  SceneSerializer.h  common.h  gameState.h
include/systems/: Editor.cpp  Editor.h  MyImgui.cpp  MyImgui.h  PhysicsEngine.cpp  PhysicsEngine.h  Renderer.cpp  Renderer.h
src/: Entity.cpp  Game.cpp  Logger.cpp  Player.cpp  Point.cpp  Scene.cpp  SceneSerializer.cpp  client_main.cpp  gameState.cpp  server_main.cpp
src/components/: InfiniteGrid.cpp  InfiniteGrid.h  Sun.cpp  Sun.h
src/components/shaders/: InfiniteGrid.fs  InfiniteGrid.vs  Model.fs  Model.vs  tree.fs  tree.vs
